--- a/Pages/Ofertas.html
+++ b/Pages/Ofertas.html
@@ -95,34 +95,34 @@
     <h1 class="text-center">Ofertas🛒</h1>
     <section id="Galeria" class="conteiner">
         <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p1.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p2.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p3.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p3.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p4.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p5.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p6.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p7.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/P8.PNG" alt="Foto galeria">
         </div>
-        <div class="col-lg-4 col-md-6 col-sm 12">
+        <div class="col-lg-4 col-md-6 col-sm 12 p-4">
           <img src="../img/p9.PNG" alt="Foto galeria">
         </div>
 
