--- a/Pages/Registrate.html
+++ b/Pages/Registrate.html
@@ -13,7 +13,7 @@
   </style>
 
 </head>
-<body class="formulario-negro">
+<body>
     <div class="headerq">
         <section class="img_section2">
             <img src="../img/28t1.gif" alt="LogoBanner" width="25%" />
