--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
     <link rel="stylesheet" href="./css/Style.css" />
     <title>Pintureria Córdoba 👨‍🎨</title>
   </head>
   <body>
-    <div class="container">
-      <div class="footer">
-             <h4>Todos los derechos reservados©</h4>
-             <div class="img_rrss"><img src="./img/pngegg.png" alt="redes" width="50rem"></div>
-             <div class="logowsp"><a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos" target="_blank"><img src="./img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"></a></div>
-      
-    </div>
+    <div class="containerH">
       <div class="header">
         <section class="img_section2">
           <img src="./img/28t1.gif" alt="LogoBanner" width="25%" />
@@ -43,11 +38,21 @@
           </ul>
         </nav>
       </div>
-      <div class="Marcas"><img src="./img/Familias 2.PNG" alt="Familia de productos"></div>
-      <div class="Lineas"><img src="./img/Familias.PNG" alt="Familia de productos"></div>
-      <div class="Cuerpo">
-        <div class="imglogo"><img src="./img/oficinas.PNG" alt="oficinas" width="700rem"></div>
+      <div class="LineasH">
+        <img src="img/Familias.PNG"  width="95%" alt="Familias">
+      </div>
+      <div class="CuerpoH">
+        <div class="imglogo"><img src="./img/oficinas.PNG" alt="oficinas" width="80%"></div>
+      </div>
+      <div class="MarcasH">
+        <img src="./img/Familias 2.PNG" width="95%" alt="Familia de productos">
+      </div>
+      <div class="footer">
+        <h4>Todos los derechos reservados©</h4>
+             <div class="img_rrss"><img src="./img/pngegg.png" alt="redes" width="50rem"></div>
+             <div class="logowsp"><a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos" target="_blank"><img src="./img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"></a></div>
       </div>
     </div>
+    
   </body>
 </html>
