--- a/Pages/Ofertas.html
+++ b/Pages/Ofertas.html
@@ -6,65 +6,9 @@
   <title>Pintureria Cordoba👨‍🎨</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Scss/Style.css">
-  <style>
-    .formulario-negro {
-      background-color: black;
-      color: white;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    .footerq {
-  text-align: center;
-  color:black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(
-    circle,
-    rgba(114, 251, 63, 1) 0%,
-    rgb(14, 10, 34) 100%
-  );
-  padding: 20px;
-  font-size: large;
-  }
-.header__nav {
-  width: 100%;
-  height: 90px;
-  background-color: rgb(2, 2, 2);
-  margin: 0 auto;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-}
-.header__menu {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  padding: 15px;
-}
-.header__link {
-  color: rgb(218, 38, 38);
-  text-decoration: none;
-  padding: 0.7rem;
-}
-.header__link:hover {
-  background-color: rgb(238, 53, 62);
-  color: rgb(0, 0, 0);
-  border-radius: 20px;}
-  .img_rrss {
-  text-align: left;
-  padding: 20px;
-}
-.logowsp {
-  width: 60px;
-  height: 60px;
-
-  position: fixed;
-  bottom: 20px;
-  right: 40px;
-}
-
-      </style>
+  
 </head>
-<body class="formulario-negro">
+<body>
     <div class="headerq">
         <section class="img_section2">
             <img src="../img/28t1.gif" alt="LogoBanner" width="25%" />
@@ -92,6 +36,8 @@
             </ul>
           </nav>
     </div>
+    <div class="bannerofertas"><img src="../img/bannerofertas.PNG" width="95%" alt="Banner Ofertas"></div>
+    
   <div class="container formulario-negro">
     <h1 class="text-center">Ofertas🛒</h1>
     <section id="Galeria" class="conteiner">
