--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pinturería Córdoba - Tu tienda de pinturas en Córdoba. Somos expertos en pinturas, linea arquitectónica, industria, diluyentes." />
+    <meta
+      name="keywords"
+      content="pinturería, pinturas, Córdoba, productos de pintura, decoración, industria, arquitectura, construcción, epoxi, latex, sintéticos, diluyentes" />
+    <meta name="author" content="Alejandro Arufe, estudiante de Coderhouse" />
     <link rel="stylesheet" href="../Scss/Style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <title>Pintureria Córdoba 👨‍🎨</title>
+    <title>Pintureria Córdoba | Quienes Somos 👨‍🎨</title>
   </head>
   <body>
     <div class="containers-QS">
@@ -24,9 +32,7 @@
           </li>
           
           <li class="header__item">
-            <a class="header__link" href="../Pages/Sucursales.html"
-              >Sucursales</a
-            >
+            <a class="header__link" href="../Pages/Sucursales.html">Sucursales</a>
           </li>
           <li class="header__item">
             <a class="header__link" href="../Pages/Ofertas.html">Ofertas</a>
@@ -40,8 +46,9 @@
       </nav>
     </div>
     <div class="Footers">
-      <div class="img_rrss"><img src="../img/pngegg.png" alt="redes" width="50rem"></div>
-         <h4>Todos los derechos reservados©</h4>
+      <a href="https://linktr.ee/pintureriacordoba" target="_blank"><div class="img_rrss"><img src="../img/pngegg.png" alt="redes" width="50rem"></div></a>
+      <div class="imglogo"><img src="../img/pintureriacordoba.png" width="6%" alt="QR"></div>
+      <h4 class="animate__animated animate__flip">Todos los derechos reservados©</h4>
          <div class="logowsp"><a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos" target="_blank"><img src="../img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"></a></div>
     </div>
     <div class="Mains">"En Pinturería Córdoba, nuestra misión es brindar la mejor calidad en pintura y herramientas para nuestros clientes. Desde nuestra fundación el 9/12/2018, hemos estado comprometidos en ofrecer productos y servicios de alta calidad para satisfacer las necesidades de nuestros clientes.
