--- a/Pages/Sucursales.html
+++ b/Pages/Sucursales.html
@@ -4,24 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pinturería Córdoba - Tenemos sucursales en los puntos más importante de la ciudad para estar siempre cerca tuyo." />
+    <meta
+      name="keywords"
+      content="pinturería, pinturas, Córdoba, productos de pintura, decoración, industria, arquitectura, construcción, sucursales, centro, Nueva Córdoba, Esquiú, Loft, General Paz, barrios" />
+    <meta name="author" content="Alejandro Arufe, estudiante de Coderhouse" />
     <link rel="stylesheet" href="../Scss/Style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Rubik:wght@300&display=swap"
       rel="stylesheet" />
-    <title>Pintureria Córdoba 👨‍🎨</title>
+    <title>Pintureria Córdoba | Sucursales 🏪</title>
   </head>
   <body>
     <div class="containers">
       <div class="footers">
         <div class="img_rrss">
-          <img src="../img/pngegg.png" alt="redes" width="50rem" />
+          <a href="https://linktr.ee/pintureriacordoba" target="_blank"
+            ><div class="img_rrss">
+              <img src="../img/pngegg.png" alt="redes" width="50rem" /></div
+          ></a>
         </div>
-        <h4>Todos los derechos reservados©</h4>
+        <div class="imglogo">
+          <img src="../img/pintureriacordoba.png" width="6%" alt="QR" />
+        </div>
+        <h4 class="animate__animated animate__flip">
+          Todos los derechos reservados©
+        </h4>
         <div class="logowsp">
-          <a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos"
-            target="_blank"><img src="../img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"/>
+          <a
+            href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos"
+            target="_blank"
+            ><img
+              src="../img/pngwing.com.png"
+              alt="Logo Whatsapp"
+              width="35rem" />
           </a>
         </div>
       </div>
