--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
+    <meta
+      name="description"
+      content="Pinturería Córdoba - Tu tienda de pinturas en Córdoba. Ofrecemos una amplia selección de pinturas y productos relacionados." />
+    <meta
+      name="keywords"
+      content="pinturería, pinturas, Córdoba, productos de pintura, decoración, industria, arquitectura, construcción" />
+    <meta name="author" content="Alejandro Arufe, estudiante de Coderhouse" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./Scss/Style.css" />
     <title>Pintureria Córdoba 👨‍🎨</title>
   </head>
@@ -17,7 +26,7 @@
         </section>
         <nav class="header__nav">
           <ul class="header__menu">
-              <li class="header__item">
+            <li class="header__item">
               <a class="header__link" href="./Pages/QuienesSomos.html"
                 >Nosotros</a
               >
@@ -39,20 +48,43 @@
         </nav>
       </div>
       <div class="LineasH">
-        <img src="img/Familias.PNG"  width="95%" alt="Familias">
+        <div class="animate__animated animate__bounceInRight">
+          <img src="img/Familias.PNG" width="95%" alt="Familias" />
+        </div>
       </div>
       <div class="CuerpoH">
-        <div class="imglogo"><img src="./img/oficinas.PNG" alt="oficinas" width="80%"></div>
+        <div class="imglogo">
+          <img src="./img/oficinas.PNG" alt="oficinas" width="80%" />
+        </div>
       </div>
       <div class="MarcasH">
-        <img src="./img/Familias 2.PNG" width="95%" alt="Familia de productos">
+        <div class="animate__animated animate__bounceInLeft">
+          <img
+            src="./img/Familias 2.PNG"
+            width="95%"
+            alt="Familia de productos" />
+        </div>
       </div>
+
       <div class="footer">
-        <h4>Todos los derechos reservados©</h4>
-             <div class="img_rrss"><img src="./img/pngegg.png" alt="redes" width="50rem"></div>
-             <div class="logowsp"><a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos" target="_blank"><img src="./img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"></a></div>
+        <h4 class="animate__animated animate__flip">
+          Todos los derechos reservados©
+        </h4>
+        <a href="https://linktr.ee/pintureriacordoba" target="_blank"
+          ><div class="img_rrss">
+            <img src="./img/pngegg.png" alt="redes" width="50rem" /></div
+        ></a>
+        <div class="imglogo">
+          <img src="./img/pintureriacordoba.png" width="6%" alt="QR" />
+        </div>
+        <div class="logowsp">
+          <a
+            href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos"
+            target="_blank"
+            ><img src="./img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"
+          /></a>
+        </div>
       </div>
     </div>
-    
   </body>
 </html>
