--- a/Pages/Ofertas.html
+++ b/Pages/Ofertas.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pintureria Cordoba👨‍🎨</title>
+  <meta
+      name="description"
+      content="Pinturería Córdoba - Conseguí los mejores precios, mejoramos cualquier presupuesto, la mejor atención y asesoramiento." />
+    <meta
+      name="keywords"
+      content="pinturería, pinturas, Córdoba, productos de pintura, decoración, industria, arquitectura, construcción, ofertas, precios bajos, combos, hot sale, descuentos, promociones" />
+    <meta name="author" content="Alejandro Arufe, estudiante de Coderhouse" />
+  <title>Pintureria Cordoba | Nuestras Ofertas🛒</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Scss/Style.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   
 </head>
 <body>
@@ -37,9 +47,11 @@
           </nav>
     </div>
     <div class="bannerofertas"><img src="../img/bannerofertas.PNG" width="95%" alt="Banner Ofertas"></div>
-    
+    <div class="transofer">
+      <h1 class="animate__animated animate__rubberBand">Ofertas🛒</h1>
+    </div>
   <div class="container formulario-negro">
-    <h1 class="text-center">Ofertas🛒</h1>
+    <h1 class="text-center"></h1>
     <section id="Galeria" class="conteiner">
         <div class="row">
         <div class="col-lg-4 col-md-6 col-sm 12 p-4">
@@ -77,8 +89,9 @@
     
   </div>
   <div class="footerq">
-    <div class="img_rrss"><img src="../img/pngegg.png" alt="redes" width="50rem"></div>
-    <h4>Todos los derechos reservados©</h4>
+    <a href="https://linktr.ee/pintureriacordoba" target="_blank"><div class="img_rrss"><img src="../img/pngegg.png" alt="redes" width="50rem"></div></a>
+    <div class="imglogo"><img src="../img/pintureriacordoba.png" width="6%" alt="QR"></div>
+    <h4 class="animate__animated animate__flip">Todos los derechos reservados©</h4>
     <div class="logowsp"><a href="https://api.whatsapp.com/send?phone=5493513639410&text=Hola! quiero consultarte por unos productos" target="_blank"><img src="../img/pngwing.com.png" alt="Logo Whatsapp" width="35rem"></a></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
