--- a/Pages/Registrate.html
+++ b/Pages/Registrate.html
@@ -37,7 +37,7 @@
             <a class="header__link" href="../index.html">Home</a>
           </li>
           <li class="header__item">
-            <a class="header__link" href="./Pages/QuienesSomos.html"
+            <a class="header__link" href="../Pages/QuienesSomos.html"
               >Nosotros</a
             >
           </li>
