--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./Scss/Style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <title>Pintureria Córdoba 👨‍🎨</title>
   </head>
   <body>
