--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -12,6 +12,7 @@
       content="pinturería, pinturas, Córdoba, productos de pintura, decoración, industria, arquitectura, construcción, epoxi, latex, sintéticos, diluyentes" />
     <meta name="author" content="Alejandro Arufe, estudiante de Coderhouse" />
     <link rel="stylesheet" href="../Scss/Style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
