--- a/Pages/Sucursales.html
+++ b/Pages/Sucursales.html
@@ -17,6 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Rubik:wght@300&display=swap"
       rel="stylesheet" />
