--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./Scss/Style.css" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon-32x32.png" />
     <title>Pintureria Córdoba 👨‍🎨</title>
   </head>
   <body>
-    <div class="containerH">
+    <div class="containerI">
       <div class="header">
         <section class="img_section2">
           <img src="./img/28t1.gif" alt="LogoBanner" width="25%" />
@@ -48,25 +52,24 @@
           </ul>
         </nav>
       </div>
-      <div class="LineasH">
-        <div class="animate__animated animate__bounceInRight">
+      <div class="LineasI">
+        <div class="animate__animated animate__flip">
           <img src="img/Familias.PNG" width="95%" alt="Familias" />
         </div>
       </div>
-      <div class="CuerpoH">
+      <div class="CuerpoI">
         <div class="imglogo">
           <img src="./img/oficinas.PNG" alt="oficinas" width="80%" />
         </div>
       </div>
-      <div class="MarcasH">
-        <div class="animate__animated animate__bounceInLeft">
+      <div class="MarcasI">
+        <div class="animate__animated animate__flip">
           <img
             src="./img/Familias 2.PNG"
             width="95%"
             alt="Familia de productos" />
         </div>
       </div>
-
       <div class="footer">
         <h4 class="animate__animated animate__flip">
           Todos los derechos reservados©
@@ -89,3 +92,4 @@
     </div>
   </body>
 </html>
+
